# firmware-x

./: .gitmodules  CMakeLists.txt  Readme.md  main.cpp  onekey_protocol.hpp  onekey_usb.hpp  onekey_usb_bootloader_mode.hpp  onekey_usb_common.hpp  onekey_usb_configfs.hpp  onekey_usb_firmware_mode.hpp  onekey_usb_functionfs.hpp  onekey_usb_util.hpp
cmake/: LinuxKernelHeaders.cmake  arm.toolchain.cmake
protobuf/: messages.proto
